Added cps to README.